@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2015 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the GNU Lesser General Public License
@@ -13,20 +13,22 @@
  *
  * Contributors:
  *     Nuxeo - initial API and implementation
- *
  */
-
 package org.nuxeo.connect.data;
 
+import java.io.IOException;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.json.JSONException;
-import org.json.JSONObject;
 import org.nuxeo.connect.data.marshaling.JSONExportableField;
 import org.nuxeo.connect.data.marshaling.JSONImportMethod;
+
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.node.ArrayNode;
+import tools.jackson.databind.node.ObjectNode;
 
 /**
  * Base class for Data Transfer Object used for the communication between Nuxeo Connect Client and Server.
@@ -56,15 +58,15 @@ public abstract class AbstractJSONSerializableData {
         return asJSON().toString();
     }
 
-    public JSONObject asJSONold() {
-        return new JSONObject(this);
+    public ObjectNode asJSONold() {
+        return JSONHelper.asObjectNode(this);
     }
 
-    public JSONObject asJSON() {
-        return new JSONObject(IntrospectionHelper.getDataToSerialize(this));
+    public ObjectNode asJSON() {
+        return JSONHelper.asObjectNode(IntrospectionHelper.getDataToSerialize(this));
     }
 
-    protected static Object doLoadFromJSON(JSONObject data, Class<?> klass, Object instance) throws JSONException {
+    protected static Object doLoadFromJSON(ObjectNode data, Class<?> klass, Object instance) {
 
         if (klass.getSuperclass() != null) {
             instance = doLoadFromJSON(data, klass.getSuperclass(), instance);
@@ -76,8 +78,10 @@ public abstract class AbstractJSONSerializableData {
                 try {
                     String name = method.getAnnotation(JSONImportMethod.class).name();
                     fieldNames.add(name);
-                    Object value = data.get(name);
-                    method.invoke(instance, new Object[] { value });
+                    JsonNode value = data.get(name);
+                    if (value != null && !value.isNull()) {
+                        method.invoke(instance, new Object[] { getValue(value, method.getParameterTypes()[0]) });
+                    }
                 } catch (Exception e) {
                     // NOP
                 }
@@ -87,7 +91,10 @@ public abstract class AbstractJSONSerializableData {
         for (Field field : instance.getClass().getDeclaredFields()) {
             if (field.getAnnotation(JSONExportableField.class) != null && (!fieldNames.contains(field.getName()))) {
                 try {
-                    field.set(instance, data.get(field.getName()));
+                    JsonNode value = data.get(field.getName());
+                    if (value != null && !value.isNull()) {
+                        field.set(instance, getValue(value, field.getType()));
+                    }
                 } catch (Exception e) {
                     // NOP
                 }
@@ -96,16 +103,53 @@ public abstract class AbstractJSONSerializableData {
         return instance;
     }
 
-    public static <T> T loadFromJSON(Class<T> targetClass, JSONObject data) throws JSONException {
+    protected static Object getValue(JsonNode value, Class<?> expectedType) {
+        if (JsonNode.class.isAssignableFrom(expectedType)) {
+            return value;
+        }
+        if (ObjectNode.class.isAssignableFrom(expectedType)) {
+            return JSONHelper.toObjectNode(value);
+        }
+        if (ArrayNode.class.isAssignableFrom(expectedType)) {
+            return JSONHelper.toArrayNode(value);
+        }
+        if (String.class.equals(expectedType)) {
+            return value.asText();
+        }
+        if (int.class.equals(expectedType) || Integer.class.equals(expectedType)) {
+            return value.asInt();
+        }
+        if (long.class.equals(expectedType) || Long.class.equals(expectedType)) {
+            return value.asLong();
+        }
+        if (boolean.class.equals(expectedType) || Boolean.class.equals(expectedType)) {
+            return value.asBoolean();
+        }
+        if (String[].class.equals(expectedType) && value.isArray()) {
+            ArrayNode array = value.asArray();
+            String[] values = new String[array.size()];
+            for (int i = 0; i < array.size(); i++) {
+                values[i] = array.get(i).asText();
+            }
+            return values;
+        }
+        return value;
+    }
+
+    public static <T> T loadFromJSON(Class<T> targetClass, ObjectNode data) throws IOException {
         try {
-            return targetClass.cast(doLoadFromJSON(data, targetClass, targetClass.newInstance()));
+            return targetClass.cast(
+                    doLoadFromJSON(data, targetClass, targetClass.getDeclaredConstructor().newInstance()));
         } catch (Exception e) {
-            throw new JSONException(e);
+            throw new IOException(e);
         }
     }
 
-    public static <T> T loadFromJSON(Class<T> targetClass, String dataStr) throws JSONException {
-        JSONObject data = new JSONObject(dataStr);
-        return loadFromJSON(targetClass, data);
+    public static <T> T loadFromJSON(Class<T> targetClass, String dataStr) throws IOException {
+        try {
+            return loadFromJSON(targetClass, JSONHelper.readObject(dataStr));
+        } catch (JacksonException e) {
+            throw new IOException(e);
+        }
     }
 }
