@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2017 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,49 +23,50 @@ import static org.nuxeo.connect.HttpClientBuilderHelper.getHttpClientBuilder;
 import static org.nuxeo.connect.connector.http.ConnectUrlConfig.getTrialRegistrationBaseUrl;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpStatus;
-import org.apache.http.NameValuePair;
-import org.apache.http.auth.AuthScope;
-import org.apache.http.auth.Credentials;
-import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.AuthCache;
-import org.apache.http.client.CredentialsProvider;
-import org.apache.http.client.config.CookieSpecs;
-import org.apache.http.client.config.RequestConfig;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.protocol.HttpClientContext;
-import org.apache.http.client.utils.URIUtils;
-import org.apache.http.impl.auth.BasicScheme;
-import org.apache.http.impl.client.BasicAuthCache;
-import org.apache.http.impl.client.BasicCredentialsProvider;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.util.EntityUtils;
-import org.json.JSONArray;
-import org.json.JSONException;
-import org.json.JSONObject;
+import org.apache.hc.client5.http.auth.AuthCache;
+import org.apache.hc.client5.http.auth.AuthScope;
+import org.apache.hc.client5.http.auth.Credentials;
+import org.apache.hc.client5.http.auth.UsernamePasswordCredentials;
+import org.apache.hc.client5.http.classic.methods.HttpGet;
+import org.apache.hc.client5.http.classic.methods.HttpPost;
+import org.apache.hc.client5.http.config.RequestConfig;
+import org.apache.hc.client5.http.cookie.StandardCookieSpec;
+import org.apache.hc.client5.http.entity.UrlEncodedFormEntity;
+import org.apache.hc.client5.http.impl.auth.BasicAuthCache;
+import org.apache.hc.client5.http.impl.auth.BasicCredentialsProvider;
+import org.apache.hc.client5.http.impl.auth.BasicScheme;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
+import org.apache.hc.client5.http.protocol.HttpClientContext;
+import org.apache.hc.client5.http.utils.URIUtils;
+import org.apache.hc.core5.http.HttpEntity;
+import org.apache.hc.core5.http.HttpStatus;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.ParseException;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.util.Timeout;
 import org.nuxeo.connect.connector.NuxeoClientInstanceType;
 import org.nuxeo.connect.connector.http.ConnectUrlConfig;
 import org.nuxeo.connect.connector.http.ProxyHelper;
 import org.nuxeo.connect.data.AbstractJSONSerializableData;
 import org.nuxeo.connect.data.ConnectProject;
+import org.nuxeo.connect.data.JSONHelper;
 import org.nuxeo.connect.identity.TechnicalInstanceIdentifier;
 import org.nuxeo.connect.registration.response.TrialErrorResponse;
 import org.nuxeo.connect.registration.response.TrialRegistrationResponse;
+
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.node.ArrayNode;
+import tools.jackson.databind.node.ObjectNode;
 
 /**
  * Helper to manage Registration to Nuxeo Connect.
@@ -80,29 +81,33 @@ public class RegistrationHelper {
 
     protected static final Log log = LogFactory.getLog(RegistrationHelper.class);
 
-    protected static List<String> ALLOWED_TRIAL_FIELDS = Arrays.asList("termsAndConditions", "company", "email",
-            "login", "connectreg:projectName", "firstName", "lastName");
+    protected static List<String> ALLOWED_TRIAL_FIELDS = List.of("termsAndConditions", "company", "email", "login",
+            "connectreg:projectName", "firstName", "lastName");
 
     protected static String getBaseUrl() {
         return ConnectUrlConfig.getRegistrationBaseUrl();
     }
 
     protected static HttpClientContext getHttpClientContext(String url, String login, String password) {
-        HttpClientContext context = HttpClientContext.create();
+        var context = HttpClientContext.create();
 
         // Set credentials provider
-        CredentialsProvider credentialsProvider = new BasicCredentialsProvider();
+        var credentialsProvider = new BasicCredentialsProvider();
+        Credentials credentials = null;
         if (login != null) {
-            Credentials ba = new UsernamePasswordCredentials(login, password);
-            credentialsProvider.setCredentials(AuthScope.ANY, ba);
+            credentials = new UsernamePasswordCredentials(login, password == null ? null : password.toCharArray());
+            credentialsProvider.setCredentials(new AuthScope(null, null, -1, null, null), credentials);
         }
         context.setCredentialsProvider(credentialsProvider);
 
         // Create AuthCache instance for preemptive authentication
         AuthCache authCache = new BasicAuthCache();
         // Generate BASIC scheme object and add it to the local auth cache
-        BasicScheme basicAuth = new BasicScheme();
         try {
+            BasicScheme basicAuth = new BasicScheme();
+            if (credentials != null) {
+                basicAuth.initPreemptive(credentials);
+            }
             authCache.put(URIUtils.extractHost(new URI(url)), basicAuth);
         } catch (URISyntaxException e) {
             throw new RuntimeException(e);
@@ -111,8 +116,8 @@ public class RegistrationHelper {
 
         // Create request configuration
         RequestConfig.Builder requestConfigBuilder = RequestConfig.custom()
-                                                                  .setConnectTimeout(10000)
-                                                                  .setCookieSpec(CookieSpecs.STANDARD);
+                                                                  .setConnectTimeout(Timeout.ofMilliseconds(10000))
+                                                                  .setCookieSpec(StandardCookieSpec.RELAXED);
 
         // Configure the http proxy if needed
         ProxyHelper.configureProxyIfNeeded(requestConfigBuilder, credentialsProvider, url);
@@ -128,23 +133,23 @@ public class RegistrationHelper {
         try (CloseableHttpClient httpClient = getHttpClientBuilder(null, null, url).build();
                 CloseableHttpResponse httpResponse = httpClient.execute(new HttpGet(url),
                         getHttpClientContext(url, login, password))) {
-            int rc = httpResponse.getStatusLine().getStatusCode();
+            int rc = httpResponse.getCode();
             if (rc == HttpStatus.SC_OK) {
                 HttpEntity responseEntity = httpResponse.getEntity();
                 if (responseEntity != null) {
                     String json = EntityUtils.toString(responseEntity);
-                    JSONArray array = new JSONArray(json);
-                    for (int i = 0; i < array.length(); i++) {
-                        JSONObject ob = (JSONObject) array.get(i);
+                    ArrayNode array = JSONHelper.readArray(json);
+                    for (int i = 0; i < array.size(); i++) {
+                        ObjectNode ob = JSONHelper.toObjectNode(array.get(i));
                         result.add(AbstractJSONSerializableData.loadFromJSON(ConnectProject.class, ob));
                     }
                 }
             } else {
                 log.error("Unhandled response code: " + rc);
             }
-        } catch (IOException e) {
+        } catch (IOException | ParseException e) {
             throw new RuntimeException(e);
-        } catch (JSONException e) {
+        } catch (JacksonException | IllegalArgumentException e) {
             log.debug(e, e);
         }
         return result;
@@ -159,22 +164,18 @@ public class RegistrationHelper {
         nvps.add(new BasicNameValuePair("type", type.getValue()));
         nvps.add(new BasicNameValuePair("CTID", TechnicalInstanceIdentifier.instance().getCTID()));
         HttpPost method = new HttpPost(url);
-        try {
-            method.setEntity(new UrlEncodedFormEntity(nvps));
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        method.setEntity(new UrlEncodedFormEntity(nvps));
         try (CloseableHttpClient httpClient = getHttpClientBuilder(null, null, url).build();
                 CloseableHttpResponse httpResponse = httpClient.execute(method,
                         getHttpClientContext(url, login, password))) {
-            int rc = httpResponse.getStatusLine().getStatusCode();
+            int rc = httpResponse.getCode();
             if (rc == HttpStatus.SC_OK) {
                 HttpEntity responseEntity = httpResponse.getEntity();
                 return responseEntity == null ? null : EntityUtils.toString(responseEntity);
             } else {
                 log.error("Unhandled response code: " + rc);
             }
-        } catch (IOException e) {
+        } catch (IOException | ParseException e) {
             throw new RuntimeException(e);
         }
         return null;
@@ -194,15 +195,11 @@ public class RegistrationHelper {
             nvps.add(new BasicNameValuePair(entry.getKey(), entry.getValue()));
         }
         HttpPost method = new HttpPost(url);
-        try {
-            method.setEntity(new UrlEncodedFormEntity(nvps));
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        method.setEntity(new UrlEncodedFormEntity(nvps));
         try (CloseableHttpClient httpClient = getHttpClientBuilder(null, null, url).build();
                 CloseableHttpResponse httpResponse = httpClient.execute(method,
                         getHttpClientContext(url, null, null))) {
-            int rc = httpResponse.getStatusLine().getStatusCode();
+            int rc = httpResponse.getCode();
             log.debug("Registration response code: " + rc);
             HttpEntity responseEntity = httpResponse.getEntity();
             if (responseEntity != null) {
@@ -215,7 +212,7 @@ public class RegistrationHelper {
                     log.error("Unhandled response code: " + rc);
                 }
             }
-        } catch (IOException e) {
+        } catch (IOException | ParseException e) {
             throw new RuntimeException(e);
         }
         return TrialErrorResponse.UNKNOWN();
